# software_scanner

./: .gitignore  README.md  ai_checkpoint.json  cli.py  pyproject.toml  report.html
scanner/: cli.py  core.py  report.py
scanner/parsers/: base.py  cpp.py  python.py
scanner/templates/: report.html
scripts/: generate_ai_checkpoint.py
software_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
templates/: report.html
tests/: test_scanner.py
